# rebotarm_control_rt

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md  README.zh.md  build.sh  pyproject.toml  run_tests.sh  setup_env.sh
cpp/: CMakeLists.txt
cpp/include/rebotarm/: arm_endpos.hpp  dynamics.hpp  math_c_api.h  robot_model.hpp  se3_conv.hpp  trajectory.hpp
cpp/src/: arm_endpos.cpp  bindings.cpp  dynamics.cpp  math_c_api.cpp  robot_model.cpp  trajectory.cpp
example/: 0x01damiao_test.py  0x02_read_damiao_pd.py  10_gravity_compensation_lock.py  1_damiao_text.py  2_zero_and_read.py  3_mit_control.py  4_pos_vel_control.py  5_fk_test.py  6_ik_test.py  7_arm_ik_control.py  8_arm_traj_control.py  9_gravity_compensation.py  gripper_test.py  rt_mit_control.py  tool_calibration.py
example/cpp/: CMakeLists.txt  README.md  README.zh.md
example/cpp/include/: example_common.hpp
example/cpp/src/: 0x02_read_damiao_pd.cpp  10_gravity_compensation_lock.cpp  1_damiao_text.cpp  2_zero_and_read.cpp  3_mit_control.cpp  4_pos_vel_control.cpp  5_fk_test.cpp  6_ik_test.cpp  7_arm_ik_control.cpp  8_arm_traj_control.cpp  9_gravity_compensation.cpp  gripper_test.cpp
example/python/: 0x01damiao_test.py  0x02_read_damiao_pd.py  10_gravity_compensation_lock.py  1_damiao_text.py  2_zero_and_read.py  3_mit_control.py  4_pos_vel_control.py  5_fk_test.py  6_ik_test.py  7_arm_ik_control.py  8_arm_traj_control.py  9_gravity_compensation.py  README.md  README.zh.md  _example_config.py  gripper_test.py  tool_calibration.py
example/python/sim/: fk_sim.py  ik_sim.py  traj_sim.py  visualizer.py
example/rust/: Cargo.toml  README.md  README.zh.md
example/rust/src/: common.rs
example/sim/: __init__.py  fk_sim.py  ik_sim.py  traj_sim.py  visualizer.py
python/rebotarm_control_rt/: __init__.py  _runtime.py  paths.py
python/rebotarm_control_rt/actuator/: __init__.py
python/rebotarm_control_rt/calibration/: __init__.py  free_drive.py  tcp.py
python/rebotarm_control_rt/config/: arm.yaml  gripper.yaml
python/rebotarm_control_rt/controllers/: __init__.py
python/rebotarm_control_rt/dynamics/: __init__.py
python/rebotarm_control_rt/kinematics/: __init__.py
python/rebotarm_control_rt/trajectory/: __init__.py
python/rebotarm_control_rt/urdf/reBot-DevArm_fixend_description/urdf/: reBot-DevArm_fixend.urdf
src/: arm.rs  config.rs  gripper.rs  lib.rs  vendor.rs
tests/python/: smoke_full.py  smoke_math.py  smoke_no_hw.py  test_actuator_validation.py  test_arm_endpos.py  test_calibration.py  test_dynamics.py  test_import.py  test_kinematics.py  test_trajectory.py
urdf/: reBot-DevArm_description_fixend
